--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.77.1",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-modal": "^3.16.3",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
