--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tanstack/react-query": "^5.77.1",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-modal": "^3.16.3",
